Updated README information

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-SPLAWSKI DAVID
+LDIF Generator
+==============
+A generator of LDIF contact files for Mozilla Thunderbird
+
+Author: David SPLAWSKI <splawski.david@gmail.com>
+
